--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
         }
     ],
     "require": {
-        "phpoffice/phpspreadsheet": "^1.10"
+        "phpoffice/phpspreadsheet": "1.8"
     }
 }
