--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,68 @@
 {
     "name": "grintex/sauron",
-    "description": "Analytics tool to provide insights on the workload of academic personnel",
     "type": "project",
-    "license": "MIT",
+    "description": "Analytics tool to provide insights on the workload of academic personnel.",
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "authors": [
         {
             "name": "Fernando Bevilacqua",
             "email": "fernando.bevilacqua@uffs.edu.br"
         }
     ],
+    "license": "MIT",
     "require": {
+        "php": "^7.2",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "^6.2",
+        "laravel/tinker": "^2.0",
         "phpoffice/phpspreadsheet": "1.8"
+    },
+    "require-dev": {
+        "facade/ignition": "^1.4",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        },
+        "classmap": [
+            "database/seeds",
+            "database/factories"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "scripts": {
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
+        ]
     }
 }
